--- a/src/app/features/pokemon/pokemon.component.scss
+++ b/src/app/features/pokemon/pokemon.component.scss
@@ -19,9 +19,8 @@
     grid-template-columns: repeat(4, 1fr); // Creates 4 columns of equal width
     gap: 30px; // Adjust the gap size as needed
 }
-  
 
-.search-input{
-    border-radius: 50px;
-    margin-left: 15px;
+.fa-heart{
+    margin-left: auto;
+    font-size: 1.5rem;
 }
