--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,4 +9,24 @@
 
 html, body {
     overflow-x: hidden;
+    background-image: url('./assets/images/grey-pokeball.svg');
+    background-position: top right;
+    background-repeat: no-repeat;
+}
+
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+
+    img.loading{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 }
