--- a/src/app/features/features.component.scss
+++ b/src/app/features/features.component.scss
@@ -11,7 +11,7 @@
       overflow-y: auto;
     }
   
-    &:not(.col-4) {
+    &.content{
       margin-left: 250px;
       flex-grow: 1;
       height: 100vh;
