--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -8,7 +8,8 @@
     <ul class="list-group">
       @for(item of menuItems; track $index){
         <li class="list-group-item bg-{{ item.color }} border-0"
-            [routerLink]="[item.route]">
+            [routerLink]="[item.route]"
+            (click)="closeSidebar()">
           <span>
             {{ item.name }}
           </span>
