--- a/src/app/features/moves/moves-table/moves-table.component.html
+++ b/src/app/features/moves/moves-table/moves-table.component.html
@@ -3,39 +3,46 @@
 <div class="container py-3">
   <div class="search d-flex justify-content-between">
     <div class="child d-flex">
-      <img src="assets/images/pokeball.svg" 
-           width="30"
-           class="pointer" >
+      @if(!isMobile){
+        <img src="assets/images/pokeball.svg" 
+             width="30"
+             class="pointer">
+      }
+      @else {
+        <i class="fa fa-bars" aria-hidden="true" (click)="toggleSidebar()"></i>
+      }
       
       <h4 class="title mx-2">Move list</h4>
     </div>
   </div>
 
   <div class="mt-3">
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Move</th>
-          <th>Type</th>
-          <th>Category</th>
-          <th>Effect</th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <tr *ngFor="let move of moves">
-          <td>{{ move.name | titlecase }}</td>
-          <td>
-            <h1 class="badge text-bg-{{ move.type.name }}">
-              {{ move.type.name | uppercase }}
-            </h1>
-          </td>
-          <td>
-            <img src="assets/images/types/{{ move.damage_class.name }}.svg" alt="">
-          </td>
-          <td class="effect">{{ move.effect_entries[0].short_effect }}</td>
-        </tr>
-    </table>
+    <div class="table-responsive">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Move</th>
+            <th>Type</th>
+            <th>Category</th>
+            <th>Effect</th>
+          </tr>
+        </thead>
+  
+        <tbody>
+          <tr *ngFor="let move of moves">
+            <td>{{ move.name | titlecase }}</td>
+            <td>
+              <h1 class="badge text-bg-{{ move.type.name }}">
+                {{ move.type.name | uppercase }}
+              </h1>
+            </td>
+            <td>
+              <img src="assets/images/types/{{ move.damage_class.name }}.svg" alt="">
+            </td>
+            <td class="effect">{{ move.effect_entries[0].short_effect }}</td>
+          </tr>
+      </table>
+    </div>
   </div>
 
   <div class="my-5">
