--- a/src/app/features/pokemon/pokemon-details/pokemon-details.component.html
+++ b/src/app/features/pokemon/pokemon-details/pokemon-details.component.html
@@ -2,6 +2,9 @@
   <div class="content">
     <div class="card details-card">
       <div class="card-body">
+        <div class="close-btn">
+          <i class="fa-solid fa-times fa-2x pointer text-{{ primaryTypeColor }}" (click)="onClose()"></i>
+        </div>
         <div class="image-container">
           <img [src]="pokemon.sprites.other['official-artwork'].front_default" 
                [alt]="pokemon.name"
