--- a/src/app/features/pokemon/pokemon.component.scss
+++ b/src/app/features/pokemon/pokemon.component.scss
@@ -16,9 +16,14 @@
 
 .parent {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); // Creates 4 columns of equal width
-    gap: 30px; // Adjust the gap size as needed
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+  
+    @media (max-width: 768px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
 }
+  
 
 .fa-heart{
     margin-left: auto;
