Update styles for moves table and pokemon component

--- a/src/app/features/pokemon/pokemon.component.scss
+++ b/src/app/features/pokemon/pokemon.component.scss
@@ -19,10 +19,16 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 30px;
   
-    @media (max-width: 768px) {
+    @media (max-width: 768px) and (orientation: portrait) {
       grid-template-columns: repeat(1, 1fr);
     }
+
+    @media (max-width: 768px) and (orientation: landscape),
+           (min-width: 769px) and (max-width: 1024px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
 }
+
   
 
 .fa-heart{
